{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 163,
  "lineage": "8df18f0f-a305-3979-427d-089865cda849",
  "resources": [
    {
      "module": "module.aws_setup_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "os2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-010aff33ed5991201",
            "arn": "arn:aws:ec2:ap-south-1:439201954535:instance/i-0f0ce34cd0d9200b9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f0ce34cd0d9200b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbaikey1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a5b466c21a52d83d",
            "private_dns": "ip-10-0-1-203.ap-south-1.compute.internal",
            "private_ip": "10.0.1.203",
            "public_ip": "13.232.2.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-045905f53fe1b64c9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b78be5e196528e5",
            "tags": {
              "Name": "terraform_os2"
            },
            "tags_all": {
              "Name": "terraform_os2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a5bc746fe22ffb83"
            ]
          },
          "dependencies": [
            "module.aws_setup_module.aws_security_group.allow_webport",
            "module.aws_setup_module.aws_subnet.subnet",
            "module.aws_setup_module.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_setup_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:439201954535:internet-gateway/igw-0ffe89589abbfe04a",
            "id": "igw-0ffe89589abbfe04a",
            "owner_id": "439201954535",
            "tags": {
              "Name": "tf_ig"
            },
            "tags_all": {
              "Name": "tf_ig"
            },
            "vpc_id": "vpc-0582258170ed10aca"
          },
          "dependencies": [
            "module.aws_setup_module.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_setup_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:439201954535:route-table/rtb-064766740fdbdc6c6",
            "id": "rtb-064766740fdbdc6c6",
            "owner_id": "439201954535",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffe89589abbfe04a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myRT"
            },
            "tags_all": {
              "Name": "myRT"
            },
            "vpc_id": "vpc-0582258170ed10aca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_setup_module.aws_internet_gateway.ig1",
            "module.aws_setup_module.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_setup_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06adb245bfc83458b",
            "route_table_id": "rtb-064766740fdbdc6c6",
            "subnet_id": "subnet-01b78be5e196528e5"
          },
          "dependencies": [
            "module.aws_setup_module.aws_internet_gateway.ig1",
            "module.aws_setup_module.aws_route_table.rt",
            "module.aws_setup_module.aws_subnet.subnet",
            "module.aws_setup_module.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a0a3f4ced65e704",
            "route_table_id": "rtb-064766740fdbdc6c6",
            "subnet_id": "subnet-04fa3ac06b3daf786"
          },
          "dependencies": [
            "module.aws_setup_module.aws_internet_gateway.ig1",
            "module.aws_setup_module.aws_route_table.rt",
            "module.aws_setup_module.aws_subnet.subnet",
            "module.aws_setup_module.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a61ea8a18a00985f",
            "route_table_id": "rtb-064766740fdbdc6c6",
            "subnet_id": "subnet-07340db3f2992be0e"
          },
          "dependencies": [
            "module.aws_setup_module.aws_internet_gateway.ig1",
            "module.aws_setup_module.aws_route_table.rt",
            "module.aws_setup_module.aws_subnet.subnet",
            "module.aws_setup_module.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_setup_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_webport",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:439201954535:security-group/sg-0a5bc746fe22ffb83",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5bc746fe22ffb83",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-webport",
            "name_prefix": "",
            "owner_id": "439201954535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-webport"
            },
            "tags_all": {
              "Name": "allow-webport"
            },
            "timeouts": null,
            "vpc_id": "vpc-0582258170ed10aca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_setup_module.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_setup_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:439201954535:subnet/subnet-01b78be5e196528e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01b78be5e196528e5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "439201954535",
            "tags": {
              "Name": "tf-subnet"
            },
            "tags_all": {
              "Name": "tf-subnet"
            },
            "vpc_id": "vpc-0582258170ed10aca"
          },
          "dependencies": [
            "module.aws_setup_module.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:439201954535:subnet/subnet-04fa3ac06b3daf786",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04fa3ac06b3daf786",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "439201954535",
            "tags": {
              "Name": "tf-subnet"
            },
            "tags_all": {
              "Name": "tf-subnet"
            },
            "vpc_id": "vpc-0582258170ed10aca"
          },
          "dependencies": [
            "module.aws_setup_module.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:439201954535:subnet/subnet-07340db3f2992be0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-07340db3f2992be0e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "439201954535",
            "tags": {
              "Name": "tf-subnet"
            },
            "tags_all": {
              "Name": "tf-subnet"
            },
            "vpc_id": "vpc-0582258170ed10aca"
          },
          "dependencies": [
            "module.aws_setup_module.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_setup_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:439201954535:vpc/vpc-0582258170ed10aca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09e384f58ef330055",
            "default_route_table_id": "rtb-03902791e2f1e690d",
            "default_security_group_id": "sg-0388b654ee084243d",
            "dhcp_options_id": "dopt-d2ca19b9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0582258170ed10aca",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03902791e2f1e690d",
            "owner_id": "439201954535",
            "tags": {
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Name": "tf-vpc"
            }
          }
        }
      ]
    }
  ]
}